# realworld-fastapi

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: dev.toml
src/realworld/: main.py
src/realworld/core/: config.py  db.py
src/realworld/dependencies/: db.py
src/realworld/jetbase/: env.py
src/realworld/jetbase/migrations/: V1__create_users_table.sql
