[project]
name = "realworld-fastapi"
version = "0.1.0"
description = "RealWorld implementation with Python and FastAPI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosql>=15.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.129.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
